beeplists: support for multiple clubs

--- a/templates/body.jade
+++ b/templates/body.jade
@@ -2,7 +2,7 @@ body
   nav.navbar.navbar-default
     div.container
       div.navbar-header
-        a.navbar-brand(href='#set/latest') dgbrowser
+        a.navbar-brand(href='#set/latest') beeplists
       ul.nav.navbar-nav
         li
           a(href="#set/latest") most recent
