--- a/templates/pages/setView/page.jade
+++ b/templates/pages/setView/page.jade
@@ -1,10 +1,13 @@
 section.page.setView
-  h2(data-hook="date")
+  h2
+    span(data-hook="date")
+    |  (
+    span(data-hook="club")
+    | )
 
   table.table.table-striped.table-hover.table-bordered
     thead
       tr
         th #
         th Song
-        th Request
     tbody(data-hook="set-contents")
